aggiunta corso videoframe

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -29,6 +29,7 @@
                   %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
                   %li= link_to tf("Photoshop", "Photoshop"), page_path(id: tf("corso_photoshop", "visual_design_photoshop"))
                   %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
+                  %li= link_to tf("Visual Frame", "Visual Frame"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
                 = link_to tf("Visual Design"), js_void
               %li
                 %ul.subnav.sub2
