--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -70,7 +70,7 @@
                 = link_to tf("Incontra un Tutor", "Meet the Tutor"), page_path(id: tf("incontro-tutor", "tutor-appointment"))
               - if english?
                 %li
-                  = link_to tf("Info per stranieri", "Student Help"), page_path(id: tf("info", "info"))
+                  = link_to tf("Info per stranieri", "Student Help"), page_path(id: tf("students-info", "students-info"))
 
             = link_to tf("Info", "info"), js_void
 
