--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -27,9 +27,9 @@
                 %ul.subnav.sub2
                   %li= link_to tf("Grafica Editoriale", "Press Graphics"), page_path(id: tf("corso_grafica_editoriale", "press_graphics_course"))
                   %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
-                  %li= link_to tf("Photoshop", "Photoshop"), page_path(id: tf("corso_photoshop", "visual_design_photoshop"))
                   %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
                   %li= link_to tf("Visual Frame", "Visual Frame"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
+                  %li= link_to tf("Pittura Creativa", "Creative Painting"), page_path(id: tf("corso_pittura_creativa", "creative_painting"))
                 = link_to tf("Visual Design"), js_void
               %li
                 %ul.subnav.sub2
