modifica formattazione blog

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -436,6 +436,8 @@ a#profile_name
     font-size: 0.8em
   #articles_list li
     margin: 10px 0 30px
+    padding: 20px
+    background-color: #efefef
 
 .articles.index #content
   img
