--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -301,7 +301,9 @@ a#profile_name {
   margin-right: 15px;
   font-size: 0.8em; }
 .articles.index #articles_list li {
-  margin: 10px 0 30px; }
+  margin: 10px 0 30px;
+  padding: 20px;
+  background-color: #efefef; }
 
 .articles.index #content img {
   width: 25%;
