--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -438,6 +438,7 @@ a#profile_name
     margin: 10px 0 30px
     padding: 20px
     background-color: #efefef
+    border-bottom: 1px solid #bfbfbf
 
 .articles.index #content
   img
