--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -20,29 +20,6 @@
               %li= link_to "Visual Design", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corso_master", "interior_design_master_course"))
             = link_to tf("Corsi Master", "Master Courses"), js_void
-        - when "specialstic_courses"
-          %li
-            %ul.subnav
-              %li
-                %ul.subnav.sub2
-                  %li= link_to tf("Grafica Editoriale", "Press Graphics"), page_path(id: tf("corso_grafica_editoriale", "press_graphics_course"))
-                  %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
-                  %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
-                  %li= link_to tf("Visual Frame", "Visual Frame"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
-                  %li= link_to tf("Pittura Creativa", "Creative Painting"), page_path(id: tf("corso_pittura_creativa", "creative_painting"))
-                = link_to tf("Visual Design"), js_void
-              %li
-                %ul.subnav.sub2
-                  - if italian?
-                    %li= link_to tf("Modellazione 3D", "3D modelling"), page_path(id: tf("interior_design_modellazione_3d", "interior_design_3d_modelling"))
-                  %li= link_to tf("Rendering", "Rendering"), page_path(id: tf("corso_rendering_interior_design", "interior_design_rendering"))
-                  %li= link_to tf("Sketch-Up", "Sketch-Up"), page_path(id: tf("corso_sketch_up_interior_design", "interior_design_sketchup"))
-                  %li= link_to tf("Autocad", "Autocad"), page_path(id: tf("corso_autocad_interior_design", "interior_design_autocad"))
-                  %li= link_to tf("3D Studio Max", "3D Studio Max"), page_path(id: tf("corso_3d_studio_max_interior_design", "interior_design_3dstudiomax"))
-                  %li= link_to tf("V-Ray", "V-Ray"), page_path(id: tf("corso_v-ray", "vray_course"))
-                = link_to tf("Interior Design"), js_void
-
-            = link_to tf("Corsi specialistici", "Specialist Courses"), js_void
 
         - when "dates_and_times"
         - when "interior_design"
@@ -51,7 +28,8 @@
             %ul.subnav
               %li= link_to tf("Visual Design", "Visual Short"), page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
               %li= link_to tf("Interior Design", "Interior Short"), page_path(id: tf("interior_design_corsi_brevi", "interior_design_short_courses"))
-            = link_to tf("Corsi brevi", "Short Courses"), js_void
+            = link_to tf("Corsi brevi", "Short/Summer Courses"), js_void
+
         - when "workshops"
           %li
             %ul.subnav
@@ -60,6 +38,18 @@
               %li
                 = link_to tf("Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_workshop"))
             = link_to tf("Corsi Serali", "Workshops"), js_void
+
+        - when "specialstic_courses"
+          %li
+            %ul.subnav
+              %li= link_to tf("Grafica Editoriale", "Press Graphics"), page_path(id: tf("corso_grafica_editoriale", "press_graphics_course"))
+              %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
+              %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
+              %li= link_to tf("Visual Frame", "Visual Frame"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
+              %li= link_to tf("Pittura Creativa", "Creative Painting"), page_path(id: tf("corso_pittura_creativa", "creative_painting"))
+              %li= link_to tf("Modellazione 3D", "3D modelling"), page_path(id: tf("interior_design_modellazione_3d", "interior_design_3d_modelling"))
+              %li= link_to tf("Sketch-Up", "Sketch-Up"), page_path(id: tf("corso_sketch_up_interior_design", "interior_design_sketchup"))
+            = link_to tf("Corsi specialistici", "Specialist Courses"), js_void
 
         - when "info"
           %li
