--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -223,6 +223,8 @@ a#profile_name {
 #home_right {
   width: 374px;
   float: right; }
+  #home_right h2 {
+    display: none; }
 
 #news li {
   clear: both; }
@@ -574,6 +576,47 @@ ul.subnav {
     font-size: 1.2em;
     padding-top: 20px;
     margin-bottom: 10px; }
+.pages.index #inner.home div.inevidenza-container {
+  width: 63%; }
+  .pages.index #inner.home div.inevidenza-container div.inevidenza-box {
+    clear: none;
+    float: left;
+    width: 31.2%;
+    margin: 0.8%; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box p {
+      margin: 0px; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box h3.inevidenza-title {
+      font-size: 0.8em;
+      color: black;
+      margin: 0; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box div.inevidenza-image {
+      clear: both;
+      float: left;
+      width: 100%;
+      margin-right: 10px; }
+      .pages.index #inner.home div.inevidenza-container div.inevidenza-box div.inevidenza-image img {
+        width: 100%;
+        max-width: 100%; }
+  .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small {
+    clear: none;
+    float: left;
+    width: 18%;
+    height: 18%;
+    margin: 0.8%; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small p {
+      margin: 0px; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small h3.inevidenza-title {
+      font-size: 0.8em;
+      color: black;
+      margin: 0; }
+    .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small div.inevidenza-image {
+      clear: both;
+      float: left;
+      width: 100%;
+      margin-right: 0.8px; }
+      .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small div.inevidenza-image img {
+        width: 100%;
+        max-width: 100%; }
 
 ul#selection {
   width: 280px;
@@ -998,7 +1041,7 @@ img.image_left {
 #content .lavoro {
   margin-top: 10px; }
   #content .lavoro .box {
-    background: #555555;
+    background: rgba(165, 164, 164, 0.92);
     padding: 8px 8px 1px; }
     #content .lavoro .box a {
       color: #eeeeee;
