--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -348,7 +348,8 @@ a#profile_name
 #home_right
   width: 374px
   float: right
-
+  h2
+    display: none
 #news
   li
     clear: both
@@ -724,6 +725,49 @@ ul.subnav
       font-size: 1.2em
       padding-top: 20px
       margin-bottom: 10px
+  div.inevidenza-container //offerta formativa
+    width: 63%  
+    .clear
+      clear:both
+    div.inevidenza-box
+      clear: none
+      float: left
+      width: 31.2%
+      margin: .8%
+      p
+        margin: 0px
+      h3.inevidenza-title
+        font-size: .8em
+        color: #000
+        margin: 0
+      div.inevidenza-image
+        clear: both
+        float: left
+        width: 100%
+        margin-right: 10px
+        img
+          width: 100%
+          max-width: 100%
+    div.inevidenza-box-small
+      clear: none
+      float: left
+      width: 18%
+      height: 18%
+      margin: .8%
+      p
+        margin: 0px
+      h3.inevidenza-title
+        font-size: .8em
+        color: #000
+        margin: 0
+      div.inevidenza-image
+        clear: both
+        float: left
+        width: 100%
+        margin-right: .8px
+        img
+          width: 100%
+          max-width: 100%
 
 
 ul#selection
@@ -1099,7 +1143,7 @@ img.image_left
   .lavoro
     margin-top: 10px
     .box
-      background: #555
+      background: rgba(165, 164, 164, 0.92)
       padding: 8px 8px 1px
       a
         color: #EEE
