--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -577,12 +577,16 @@ ul.subnav {
     padding-top: 20px;
     margin-bottom: 10px; }
 .pages.index #inner.home div.inevidenza-container {
-  width: 63%; }
+  width: 57%; }
+  .pages.index #inner.home div.inevidenza-container * {
+    box-sizing: border-box; }
+  .pages.index #inner.home div.inevidenza-container .clear {
+    clear: both; }
   .pages.index #inner.home div.inevidenza-container div.inevidenza-box {
     clear: none;
     float: left;
     width: 31.2%;
-    margin: 0.8%; }
+    padding: 0.8%; }
     .pages.index #inner.home div.inevidenza-container div.inevidenza-box p {
       margin: 0px; }
     .pages.index #inner.home div.inevidenza-container div.inevidenza-box h3.inevidenza-title {
@@ -593,7 +597,7 @@ ul.subnav {
       clear: both;
       float: left;
       width: 100%;
-      margin-right: 10px; }
+      padding-right: 10px; }
       .pages.index #inner.home div.inevidenza-container div.inevidenza-box div.inevidenza-image img {
         width: 100%;
         max-width: 100%; }
@@ -602,10 +606,12 @@ ul.subnav {
     float: left;
     width: 18%;
     height: 18%;
-    margin: 0.8%; }
+    padding: 0.8%; }
     .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small p {
       margin: 0px; }
     .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small h3.inevidenza-title {
+      white-space: nowrap;
+      overflow: hidden;
       font-size: 0.8em;
       color: black;
       margin: 0; }
@@ -613,7 +619,7 @@ ul.subnav {
       clear: both;
       float: left;
       width: 100%;
-      margin-right: 0.8px; }
+      padding-right: 0.8px; }
       .pages.index #inner.home div.inevidenza-container div.inevidenza-box-small div.inevidenza-image img {
         width: 100%;
         max-width: 100%; }
