--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -726,14 +726,16 @@ ul.subnav
       padding-top: 20px
       margin-bottom: 10px
   div.inevidenza-container //offerta formativa
-    width: 63%  
+    width: 57%
+    & *
+      box-sizing: border-box
     .clear
-      clear:both
+      clear: both
     div.inevidenza-box
       clear: none
       float: left
       width: 31.2%
-      margin: .8%
+      padding: .8%
       p
         margin: 0px
       h3.inevidenza-title
@@ -744,7 +746,7 @@ ul.subnav
         clear: both
         float: left
         width: 100%
-        margin-right: 10px
+        padding-right: 10px
         img
           width: 100%
           max-width: 100%
@@ -753,10 +755,12 @@ ul.subnav
       float: left
       width: 18%
       height: 18%
-      margin: .8%
+      padding: .8%
       p
         margin: 0px
       h3.inevidenza-title
+        white-space: nowrap
+        overflow: hidden
         font-size: .8em
         color: #000
         margin: 0
@@ -764,7 +768,7 @@ ul.subnav
         clear: both
         float: left
         width: 100%
-        margin-right: .8px
+        padding-right: .8px
         img
           width: 100%
           max-width: 100%
