--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -12,7 +12,7 @@
             %ul.subnav
               %li= link_to "Visual Design", page_path(id: tf("visual_design_corsi_annuali", "visual_design_annual_training"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corsi_annuali", "interior_design_annual_training"))
-              %li= link_to "Web e Nuovi Media", page_path(id: tf("digital_communication_design_annuale", "web_communication_design"))
+              %li= link_to "Digital Communication", page_path(id: tf("digital_communication_design_annuale", "web_communication_design"))
             = link_to tf("Corsi Annuali", "Annual Courses"), js_void
         - when "master_courses"
           %li
