--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
 
     - if @page && @page.id == 9 # contacts
       %script{ src: "http://maps.google.com/maps/api/js?sensor=false" }
-      %script{ type: "text/javascript", src: "gmap.js" }
+      %script{ type: "text/javascript", src: " /javascripts/gmaps.js" }
 
 
     - if Rails.env == "production" && !analytics_tracker.blank?
