--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,7 +16,7 @@
       %div.clear
       %h3.info_title= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
-      = f.label     :int_annuali_visual,    "VISUAL DESIGN - #{tf "annuale", "annual"}"
+      = f.label     :int_annuali_visual,    "#{tf "GRAFICA PUBBLICITARIA annuale", "GRAPHIC DESIGN 1 year course"}"
       = f.check_box :int_annuali_interior
       = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "annuale", "annual"}"
       = f.check_box :int_annuali_web
@@ -40,7 +40,7 @@
       %div.clear
       %h3.open_day= tf("PARTECIPAZIONE OPEN DAY GRATUITO", "PARTICIPATION FREE OPEN DAY")
       = f.check_box :int_stage_visual
-      = f.label     :int_stage_visual,    "#{tf "OPEN DAY", "OPEN DAY"} VISUAL DESIGN"
+      = f.label     :int_stage_visual,    "#{tf "OPEN DAY GRAFICA PUBBLICITARIA", "OPEN DAY GRAPHIC DESIGN"}"
       = f.check_box :int_stage_interior
       = f.label     :int_stage_interior,  "#{tf "OPEN DAY", "OPEN DAY"} INTERIOR DESIGN"
       = f.check_box :int_stage_web
