--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -17,7 +17,7 @@
         - when "master_courses"
           %li
             %ul.subnav
-              %li= link_to "Visual Design", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
+              %li= link_to "Graphic Design", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corso_master", "interior_design_master_course"))
             = link_to tf("Corsi Master", "Master Courses"), js_void
 
@@ -26,7 +26,7 @@
         - when "summer_courses" # corsi estivi
           %li
             %ul.subnav
-              %li= link_to tf("Visual Design", "Visual Short"), page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
+              %li= link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
               %li= link_to tf("Interior Design", "Interior Short"), page_path(id: tf("interior_design_corsi_brevi", "interior_design_short_courses"))
               %li= link_to tf("Grafica Editoriale", "Press Graphics"), page_path(id: tf("corso_grafica_editoriale", "press_graphics_course"))
               %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
@@ -41,7 +41,7 @@
           %li
             %ul.subnav
               %li
-                = link_to tf("Visual Design"), page_path(id: tf("laboratorio_visual_design", "visual_design_workshop"))
+                = link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("laboratorio_visual_design", "visual_design_workshop"))
               %li
                 = link_to tf("Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_workshop"))
             = link_to tf("Corsi Serali", "Workshops"), js_void
