--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -416,8 +416,9 @@ a#profile_name
     clear: both
 
 .articles.show .date
-  margin-top: 5px
-  font-size: 0.7em
+  font-size: 1em
+  position: relative
+  top: -23px
   float: right
 
 .articles.show #content
