--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -286,8 +286,9 @@ a#profile_name {
   clear: both; }
 
 .articles.show .date {
-  margin-top: 5px;
-  font-size: 0.7em;
+  font-size: 1em;
+  position: relative;
+  top: -23px;
   float: right; }
 
 .articles.show #content img {
