corso breve illuminotecnica

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -33,6 +33,7 @@
               %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
               %li= link_to tf("Visual Frame", "Visual Frame"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
               %li= link_to tf("Pittura Creativa", "Creative Painting"), page_path(id: tf("corso_pittura_creativa", "creative_painting"))
+              %li= link_to tf("Illuminotecnica", "Lighting"), page_path(id: tf("corso_illuminotecnica", "lighting_course"))
               %li= link_to tf("Modellazione 3D", "3D modelling"), page_path(id: tf("interior_design_modellazione_3d", "interior_design_3d_modelling"))
               %li= link_to tf("Sketch-Up", "Sketch-Up"), page_path(id: tf("corso_sketch_up_interior_design", "interior_design_sketchup"))
             = link_to tf("Corsi brevi", "Short/Summer Courses"), js_void
