--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -415,11 +415,16 @@ a#profile_name
   p
     clear: both
 
+.articles.show h2
+  padding-right: 120px
+
 .articles.show .date
   font-size: 1em
   position: relative
-  top: -23px
+  top: -30px
   float: right
+  font-weight: bold
+  // padding: 0 0 5px 8px
 
 .articles.show #content
   img
