da corsi master a master nel menu

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -19,7 +19,7 @@
             %ul.subnav
               %li= link_to "Graphic Design", page_path(id: tf("visual_design_corso_master", "visual_design_master_course"))
               %li= link_to "Interior Design", page_path(id: tf("interior_design_corso_master", "interior_design_master_course"))
-            = link_to tf("Corsi Master", "Master Courses"), js_void
+            = link_to tf("Master", "Master"), js_void
 
         - when "dates_and_times"
         - when "interior_design"
