grafica pubblicitaria in form

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -22,19 +22,19 @@
       = f.check_box :int_annuali_web
       = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION"
       = f.check_box :int_master_visual
-      = f.label     :int_master_visual,    "VISUAL DESIGN - #{tf "master", "master"}"
+      = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN master", "GRAPHIC DESIGN master"}"
       = f.check_box :int_master_interior
       = f.label     :int_master_interior,  "INTERIOR DESIGN -#{tf "master", "master"}"
       = f.check_box :int_special_visual
-      = f.label     :int_special_visual,    "VISUAL DESIGN - #{tf "specialistici", "specialist"}"
+      = f.label     :int_special_visual,    "#{tf "GRAFICA PUBBLICITARIA specialistici", "GRAPHIC DESIGN specialist"}"
       = f.check_box :int_special_interior
       = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "specialistici", "specialist"}"
       = f.check_box :int_workshop_visual
-      = f.label     :int_workshop_visual,    "VISUAL DESIGN - #{tf "laboratorio", "workshop"}"
+      = f.label     :int_workshop_visual,    "#{tf "GRAFICA PUBBLICITARIAlaboratorio", "GRAPHIC DESIGN workshop"}"
       = f.check_box :int_workshop_interior
       = f.label     :int_workshop_interior,  "INTERIOR DESIGN -#{tf "laboratorio", "workshop"}"
       = f.check_box :int_brevi_visual
-      = f.label     :int_brevi_visual,    "VISUAL DESIGN - #{tf "breve", "short"}"
+      = f.label     :int_brevi_visual,    "#{tf "GRAFICA PUBBLICITARIAbreve", "GRAPHIC DESIGN short"}"
       = f.check_box :int_brevi_interior
       = f.label     :int_brevi_interior,  "INTERIOR DESIGN -#{tf "breve", "short "}"
       %div.clear
