google remarketing tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -76,3 +76,12 @@
         });
 
       });
+    :javascript
+      var google_conversion_id = 1048016950;
+      var google_custom_params = window.google_tag_params;
+      var google_remarketing_only = true;
+
+    %script{:src => "//www.googleadservices.com/pagead/conversion.js", :type => "text/javascript"}
+    %noscript
+      %div{:style => "display:inline;"}
+        %img{:alt => "", :height => "1", :src => "//googleads.g.doubleclick.net/pagead/viewthroughconversion/1048016950/?value=0&amp;guid=ON&amp;script=0", :style => "border-style:none;", :width => "1"}/
