visual design to grafica pubblicitaria

--- a/app/views/pages/offer.html.haml
+++ b/app/views/pages/offer.html.haml
@@ -4,7 +4,7 @@
 - title tf("Offerta formativa", "Training")
 
 .visual
-  %h1 Visual Design
+  %h1 grafica pubblicitaria
 
   %section
     %h1= tf "Annuale", "Annual"
@@ -13,7 +13,7 @@
       = tf "Durata:", "Duration:"
       %strong= tf "2 Semestri", "2 Semesters"
     .text
-      = tf markup("Il *Corso Annuale di Visual Design* è rivolto a coloro che aspirano a diventare professionisti nei settori della Comunicazione Visiva, dell’Illustrazione, della Grafica Editoriale, del Web Design e della Grafica Pubblicitaria.\nIn due semestri consecutivi vengono poste le basi per intraprendere una professione legata alla progettazione visiva, approfondendo le diverse tecniche di creazione, elaborazione e impaginazione, con materie che spaziano dal disegno, alla computer grafica fino alla fotografia."), markup("The *Visual Design Annual Course* is ....")
+      = tf markup("Il *Corso Annuale di grafica pubblicitaria* è rivolto a coloro che aspirano a diventare professionisti nei settori della Comunicazione Visiva, dell’Illustrazione, della Grafica Editoriale, del Web Design e della Grafica Pubblicitaria.\nIn due semestri consecutivi vengono poste le basi per intraprendere una professione legata alla progettazione visiva, approfondendo le diverse tecniche di creazione, elaborazione e impaginazione, con materie che spaziano dal disegno, alla computer grafica fino alla fotografia."), markup("The *Graphic Design Annual Course* is ....")
 
   %section
     %h1 Master
@@ -22,7 +22,7 @@
       = tf "Durata:", "Duration:"
       %strong= tf "1 Semestre", "1 Semester"
     .text
-      = tf markup("Il Master in Visual Design è il completamento del percorso di studi che inizia con il Corso Annuale; gli studenti hanno la possibilità di approfondire la preparazione e ottenere al termine del master una qualifica ulteriore.\nAttraverso un programma mirato di esercitazioni pratiche e laboratori, partecipazioni a concorsi, workshop e incontri di approfondimento con scrittori, redattori e illustratori si svilupperanno le competenze necessarie ad avvicinarsi gradualmente al mondo del lavoro.")
+      = tf markup("Il Master in Graphic Design è il completamento del percorso di studi che inizia con il Corso Annuale; gli studenti hanno la possibilità di approfondire la preparazione e ottenere al termine del master una qualifica ulteriore.\nAttraverso un programma mirato di esercitazioni pratiche e laboratori, partecipazioni a concorsi, workshop e incontri di approfondimento con scrittori, redattori e illustratori si svilupperanno le competenze necessarie ad avvicinarsi gradualmente al mondo del lavoro.")
 
   %section
     %h1= tf("Specialistici", "Postgraduate")
@@ -40,7 +40,7 @@
       = tf "Durata:", "Duration:"
       %strong= tf "1 Quadrimestre", "1 Quadrimester"
     .text
-      = tf markup("Il Laboratorio serale di Visual Design è rivolto a coloro che lavorano o che hanno poco tempo a disposizione ma che vogliono apprendere alcuni degli aspetti fondamentali della Grafica e della Comunicazione Visiva imparando ad utilizzare i principali strumenti della Computer Grafica.")
+      = tf markup("Il Laboratorio serale di grafica pubblicitaria è rivolto a coloro che lavorano o che hanno poco tempo a disposizione ma che vogliono apprendere alcuni degli aspetti fondamentali della Grafica e della Comunicazione Visiva imparando ad utilizzare i principali strumenti della Computer Grafica.")
 
   %section
     %h1= tf("Introduttivi", "Introductory")
