--- a/app/views/works/_tab_lavoro.haml
+++ b/app/views/works/_tab_lavoro.haml
@@ -36,7 +36,7 @@
       %td 89 
       %td 115
 
-  %h4 Corsi di Visual Design
+  %h4 Corsi di Grafica Pubblicitaria
   %table{ cellspacing: 0 }
     %thead
       %tr
