--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -45,8 +45,8 @@
               %li
                 = link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("laboratorio_visual_design", "visual_design_workshop"))
               %li
-                = link_to tf("Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_workshop"))
-            = link_to tf("Corsi Serali", "Workshops"), js_void
+                = link_to tf("Interior Design", "Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_workshop"))
+            = link_to tf("Corsi Serali", "Evening classes"), js_void
 
         - when "info"
           %li
