modifica css lavoro

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1195,7 +1195,7 @@ img.image_left
       background: #fafafa
       padding: 1px 8px
     thead th
-      background: #486B48
+      background: #999
       color: #FFF
       padding-top: 4px
       padding-bottom: 4px
@@ -1204,7 +1204,7 @@ img.image_left
       td
         padding-top: 4px
         padding-bottom: 4px
-        background: #c00
+        background: #C82D5E
         color: #FFF
 
 .share_btns
