modifica form per serali

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,25 +16,19 @@
       %div.clear
       %h3.info_title= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
-      = f.label     :int_annuali_visual,    "#{tf "GRAFICA PUBBLICITARIA annuale", "GRAPHIC DESIGN 1 year course"}"
+      = f.label     :int_annuali_visual,    "#{tf "GRAFICA PUBBLICITARIA - Annuale", "GRAPHIC DESIGN - 1 year Course"}"
       = f.check_box :int_annuali_interior
-      = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "annuale", "annual"}"
+      = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "Corso Annuale", "1 Year Course"}"
       = f.check_box :int_annuali_web
       = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION"
       = f.check_box :int_master_visual
-      = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN master", "GRAPHIC DESIGN master"}"
+      = f.label     :int_master_visual,    "#{tf "GRAPHIC DESIGN - Master", "GRAPHIC DESIGN - Master"}"
       = f.check_box :int_master_interior
-      = f.label     :int_master_interior,  "INTERIOR DESIGN -#{tf "master", "master"}"
-      = f.check_box :int_special_visual
-      = f.label     :int_special_visual,    "#{tf "GRAFICA PUBBLICITARIA specialistici", "GRAPHIC DESIGN specialist"}"
-      = f.check_box :int_special_interior
-      = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "specialistici", "specialist"}"
-      = f.check_box :int_workshop_visual
-      = f.label     :int_workshop_visual,    "#{tf "GRAFICA PUBBLICITARIAlaboratorio", "GRAPHIC DESIGN workshop"}"
-      = f.check_box :int_workshop_interior
-      = f.label     :int_workshop_interior,  "INTERIOR DESIGN -#{tf "laboratorio", "workshop"}"
+      = f.label     :int_master_interior,  "INTERIOR DESIGN - #{tf "Master", "Master"}"
+      = f.check_box :int_evening
+      = f.label     :int_evening,    "#{tf "Corsi Serali", "Evening Classes"}"
       = f.check_box :int_brevi_visual
-      = f.label     :int_brevi_visual,    "#{tf "GRAFICA PUBBLICITARIAbreve", "GRAPHIC DESIGN short"}"
+      = f.label     :int_brevi_visual,    "#{tf "GRAFICA PUBBLICITARIA - Corso Breve", "GRAPHIC DESIGN - short course"}"
       = f.check_box :int_brevi_interior
       = f.label     :int_brevi_interior,  "INTERIOR DESIGN -#{tf "breve", "short "}"
       %div.clear
@@ -45,6 +39,8 @@
       = f.label     :int_stage_interior,  "#{tf "OPEN DAY", "OPEN DAY"} INTERIOR DESIGN"
       = f.check_box :int_stage_web
       = f.label     :int_stage_web,  "#{tf "OPEN DAY", "OPEN DAY"} DIGITAL COMMIUNICATION"
+      = f.check_box :int_stage_evening
+      = f.label     :int_stage_evening,  "#{tf "OPEN DAY CORSI SERALI", "OPEN DAY EVENING CLASSES"}"
 
     .form
       = f.label :first_name, tf("Nome", "First name")
