corso serale food design

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -41,6 +41,8 @@
               %li
                 = link_to tf("Illuminotecnica", "Lighting"), page_path(id: tf("corso_illuminotecnica", "lighting_course"))
               %li
+                = link_to tf("Food Design", "Food Design"), page_path(id: tf("corso_food_design", "food_design"))
+              %li
                 = link_to tf("Video Editing", "Video Editing"), page_path(id: tf("corso_video_editing_visualframe", "visual_frame_video_editing"))
               %li
                 = link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
