pagina interior inglese

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -28,6 +28,7 @@
             %ul.subnav
               %li= link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
               %li= link_to tf("Interior Design", "Interior Short"), page_path(id: tf("interior_design_corsi_brevi", "interior_design_short_courses"))
+              %li= link_to tf("Interior Design in Inglese", "Interior Design in English"), page_path(id: tf("corso_interior_design_inglese", "interior_design_english"))
             = link_to tf("Corsi brevi", "Short/Summer Courses"), js_void
         - when "workshops"
           %li
