modifica sezione lavoro

--- a/app/views/works/index.html.haml
+++ b/app/views/works/index.html.haml
@@ -2,7 +2,7 @@
 
 - if admin?
   %p
-    = link_to "Inserisci Offerta", [:new_work], class: "button" 
+    = link_to "Richiesta candidatura studenti", [:new_work], class: "button" 
 
 = render partial: "tab_lavoro"
 
