--- a/app/views/works/new.html.haml
+++ b/app/views/works/new.html.haml
@@ -1,5 +1,5 @@
-%h2 Inserisci Lavoro
+%h2 Richiedi Candidatura Studenti per la tua Azienda
 
 = form_for Work.new do |f|
   = render partial: "form", locals: { f: f }
-  = f.submit "Inserisci", class: "submit"
+  = f.submit "Inoltra la richiesta", class: "submit"
