--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -3,7 +3,7 @@
   #nav_cont
     %ul#nav
       - pages.each_with_index do |page, idx|
-        - if idx == 1      
+        - if idx == 1
           %li
             = link_to "News", [:posts]
         - case page.title_url_en
@@ -28,7 +28,8 @@
             %ul.subnav
               %li= link_to tf("Grafica Pubblicitaria", "Graphic Design"), page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
               %li= link_to tf("Interior Design", "Interior Short"), page_path(id: tf("interior_design_corsi_brevi", "interior_design_short_courses"))
-              %li= link_to tf("Interior Design in Inglese", "Interior Design in English"), page_path(id: tf("corso_interior_design_inglese", "interior_design_english"))
+              -# - if english?
+              -#   %li= link_to tf("Interior Design in Inglese", "Interior Design in English"), page_path(id: tf("corso_interior_design_inglese", "interior_design_english"))
             = link_to tf("Corsi brevi", "Short/Summer Courses"), js_void
         - when "workshops"
           %li
@@ -48,7 +49,7 @@
               %li
                 = link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
               %li
-                = link_to tf("Progettare il punto vendita", "Design the space of sale"), page_path(id: tf("corso_progettazione_spazio_vendita", "design_space_sale_course"))  
+                = link_to tf("Progettare il punto vendita", "Design the space of sale"), page_path(id: tf("corso_progettazione_spazio_vendita", "design_space_sale_course"))
             = link_to tf("Corsi Serali", "Evening classes"), js_void
         - when "info"
           %li
