--- a/app/views/user_mailer/admin_borsa.haml
+++ b/app/views/user_mailer/admin_borsa.haml
@@ -1,69 +1,78 @@
 %h2 Nuova richiesta Borsa di studio:
 
-%p.tit 
-  Nome: 
+%p.tit
+  Nome:
   %span.val= @user.name
 
-%p.tit 
-  Email: 
+%p.tit
+  Email:
   %span.val= @user.email
 
-%p.tit 
-  Lingua: 
+%p.tit
+  Lingua:
   %span.val= @user.lang == "it" ? "Italiano" : "Inglese"
 
-%p.tit 
-  Indirizzo: 
+%p.tit
+  Indirizzo:
   %span.val= @user.address
 
-%p.tit 
-  Città: 
+%p.tit
+  Città:
   %span.val= @user.city
 
-%p.tit 
-  CAP: 
+%p.tit
+  CAP:
   %span.val= @user.cap
 
-%p.tit 
-  Telefono: 
+%p.tit
+  Telefono:
   %span.val= @user.tel
 
 
 %p.tit
-  Nato a: 
+  Nato a:
   %span.val= @user.birthplace
 
-%p.tit 
-  Il: 
+%p.tit
+  Il:
   %span.val
     - unless @user.birthdate.nil?
-      = I18n.l @user.birthdate, format: :long 
+      = I18n.l @user.birthdate, format: :long
 
-%p.tit 
-  Titolo di studio: 
+%p.tit
+  Titolo di studio:
   %span.val= @user.qualification
 
-%p.tit 
-  Votazione: 
+%p.tit
+  Votazione:
   %span.val= @user.grade
 
-%p.tit 
-  Note: 
+%p.tit
+  Note:
   %span.val= @user.notes
 
 
-%p.tit 
-  Newsletter: 
+%p.tit
+  Newsletter:
   %span.val= @user.newsletter ? "Si" : "No"
 
 
 .clear
 = render partial: "users/user_infos"
 
--#- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"] 
+-#- infos = ["Altri titoli di studio/corsi di specializzazione frequentati", "Esperienze (anche amatoriali) nel campo specifico del corso prescelto", "Esperienze di lavoro maturate", "Cosa mi spinge a compiere studi in questo ambito", "Altre Info. utili, idonee a valutare il mio interesse a partecipare al corso"]
 -#- 5.times do |i|
 -#  %p.tit.bold #{infos[i]}:
 -#  %p.val= @user.send("info#{i}")
 
-    
+
+
+%p.tit
+  PDF:
+  - if @user.cv?
+    %a{ href: @user.cv_url }= @user.cv_url
+  - else
+    Non presente
+
+
 .clear
