--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -27,13 +27,34 @@
     - I18n.l date, format: :long unless date.nil?
   - show_field :qualification, "Titolo di studio"
 
-%h4.tit
-  PDF:
-%p
+%br
+
+%br
+
+
+-# duplicate of admin_borsa
+
+%p.tit
+  CV:
   - if @user.cv?
     %a{ href: @user.cv_url }= @user.cv_url
   - else
     Non presente
+
+%p.tit
+  Portfolio:
+  - if @user.portfolio?
+    %a{ href: @user.portfolio_url }= @user.portfolio_url
+  - else
+    Non presente
+
+%p.tit
+  Foto:
+  - if @user.user_image?
+    %a{ href: @user.user_image_url }= @user.user_image_url
+  - else
+    Non presente
+
 
 %br
 
